docs: refresh README based on current codebase